[package]
name = "pee"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
documentation = "https://docs.rs/pee"
repository = "https://github.com/BrainiumLLC/pee"
readme = "README.md"
keywords = ["geometry", "math", "mathematics"]
categories = ["graphics"]
license = "Apache-2.0/MIT"

[features]
serde = ["gee/serde"]

[dependencies]
gee = { git = "https://github.com/BrainiumLLC/gee" }
itertools = "0.10.1"
lyon_tessellation = "0.14.1"
