[package]
name = "pendragon"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2021"
description = "Easy polygon drawing built on top of lyon."
documentation = "https://docs.rs/pendragon"
repository = "https://github.com/BrainiumLLC/pendragon"
readme = "README.md"
keywords = ["geometry", "math", "mathematics"]
categories = ["graphics"]
license = "Apache-2.0/MIT"

[features]
serde = ["gee/serde"]

[dependencies]
gee = { version = "0.3.0", git = "https://github.com/BrainiumLLC/gee", features = ["euclid"] }
itertools = "0.10.1"
lyon_tessellation = "0.17.8"
thiserror = "1.0.26"
